--- a/source/sass/blocks/card.scss
+++ b/source/sass/blocks/card.scss
@@ -68,11 +68,15 @@
   }
 }
 
+.card__picture,
 .card__img {
   grid-area: img;
 
   align-self: center;
   justify-self: center;
+  width: auto;
+  height: auto;
+
 }
 
 .card__list {
