--- a/source/sass/blocks/show-more.scss
+++ b/source/sass/blocks/show-more.scss
@@ -9,7 +9,7 @@
     padding: 39px 36px;
     display: flex;
     flex-direction: column;
-    justify-content: end;
+    justify-content: flex-end;
 
     border: 2px solid $basic-grey;
   }
